<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/CoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        tools:visibility="visible">

        <Button
            android:id="@+id/BackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button_text" />

        <LinearLayout
            android:id="@+id/ButtonMenuLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/ShoppingListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/ShoppingListButtonText" />

            <Button
                android:id="@+id/WeeklyTodoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/weekly_todo_button_text" />

            <Button
                android:id="@+id/TodoListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/TodoListViewButtonText" />

            <Button
                android:id="@+id/TodaysItemsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/todays_item_button_text" />

            <Button
                android:id="@+id/AddPurchaseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/add_purchase_button_text" />

            <Button
                android:id="@+id/RepeatingItemsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/repeating_items_button_view" />

            <Button
                android:id="@+id/historyViewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/historyButtonText" />

            <Button
                android:id="@+id/TodoHistoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/todo_history_button_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/WeeklyTodoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/WeeklyTodoList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                tools:visibility="visible">

            </ListView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TodoListLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/AddTodoLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/AddTodoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/add_todo_text_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/AddTodoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_todo_button_text" />
            </LinearLayout>

            <ListView
                android:id="@+id/TodoList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                tools:visibility="visible">

            </ListView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ShoppingListLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/AddToShoppingListLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <AutoCompleteTextView
                    android:id="@+id/AddToShoppingListItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="purchase"
                    android:ems="10"
                    android:hint="@string/purchase_name_default_text"
                    android:inputType="textShortMessage" />

                <EditText
                    android:id="@+id/AddToShoppingListItemQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="quantity"
                    android:hint="@string/quantity_button_hint"
                    android:inputType="numberSigned"
                    android:text="@string/default_quantity" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <Button
                        android:id="@+id/AddToShoppingListButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:text="@string/add_to_list_send_button_text"
                        tools:text="@string/add_to_list_send_button_text" />
                </LinearLayout>
            </LinearLayout>

            <ListView
                android:id="@+id/ShoppingList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TodoHistoryLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/TodoHistoryList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:listSelector="@android:color/transparent"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/HistoryLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/HistoryList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:listSelector="@android:color/transparent"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/AddPurchaseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <AutoCompleteTextView
                android:id="@+id/PurchaseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="purchase"
                android:ems="10"
                android:hint="@string/purchase_name_default_text"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/PurchaseQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="quantity"
                android:ems="10"
                android:hint="@string/quantity_button_hint"
                android:inputType="numberSigned"
                android:text="@string/default_quantity"
                tools:text="@string/default_quantity" />

            <Button
                android:id="@+id/AddPurchaseSendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_purchase_send_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TodaysItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <ListView
                android:id="@+id/ShoppingItemList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                tools:visibility="visible">

            </ListView>

            <Button
                android:id="@+id/ConfirmTodayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_today_button_text"
                tools:text="@string/confirm_today_button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/RepeatingItemsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/AddRepeatingItemLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/AddRepeatingItemItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:autofillHints="repeating_item"
                    android:ems="10"
                    android:hint="@string/add_repeating_item_item_default_text"
                    android:inputType="text" />

                <Button
                    android:id="@+id/AddRepatingItemButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_repeating_item_button_text" />
            </LinearLayout>

            <ListView
                android:id="@+id/RepeatingItemsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:listSelector="@android:color/transparent" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
