<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/ShoppingListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/template_title_text"
            app:myText="@{`Shopping List`}" />

        <include layout="@layout/template_divider" />

        <LinearLayout
            android:id="@+id/AddToShoppingListLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <AutoCompleteTextView
                android:id="@+id/AddToShoppingListItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="purchase"
                android:ems="10"
                android:hint="@string/purchase_name_default_text"
                android:inputType="textShortMessage"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/AddToShoppingListItemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="quantity"
                android:hint="@string/quantity_button_hint"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:text="@string/default_quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <include
                    android:id="@+id/ShoppingListAddButton"
                    layout="@layout/template_small_button"
                    app:myText="@{`Add to List`}" />

                <include
                    android:id="@+id/ShoppingListBackButton"
                    layout="@layout/template_small_button"
                    app:myText="@{`Back`}" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/template_divider" />

        <include
            android:id="@+id/ShoppingList"
            layout="@layout/template_list_view"/>

    </LinearLayout>
</layout>
